2003-05-16  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (_AS_UNSET_PREPARE): s/FOO/as_foo/ to avoid
	user name space clashes.
	Reported by Bruno Haible.

2003-05-16  Akim Demaille  <akim@epita.fr>

	* bin/autoheader.in, bin/autom4te.in, bin/autoreconf.in,
	* bin/autoscan.in, bin/autoupdate.in, bin/ifnames.in (BEGIN): Make
	them uniform, and more robust to Perl special characters.
	Reported by Martin Mokrej.

2003-05-14  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (Libtool): Skip all Libtools pre 1.4.

2003-05-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Header Portability): X11/extensions/scrnsaver.h,
	linux/irda.h.

2003-05-12  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/lang.m4 (_AC_COMPILER_EXEEXT_DEFAULT): Improve the
	message.
	From Matthias Andree.

2003-05-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Autom4te/XFile.pm (lock, truncate): Do not pass @_ to flock
	and truncate.

2003-05-06  Akim Demaille  <akim@epita.fr>

	Don't try to be smart with aclocal 1.8+ because (i) aclocal no
	longer updates aclocal.m4 if useless, (ii) if a file m4_included
	by aclocal.m4 is changed it might require the importing of another
	m4 extension file, i.e., aclocal must be run.

	* bin/autoreconf.in (&run_aclocal, $aclocal_supports_force): New.
	(&parse_args): Use --force with aclocal if required and supported.
	(&autoreconf_current_directory): Use &run_aclocal.

2003-05-06  Akim Demaille  <akim@epita.fr>

	Lock autom4te's cache.

	* lib/Autom4te/XFile.pm ($me, &name, &lock, &truncate, &seek): New.
	* bin/autom4te.in (&Request::save, &Request::load): Use an IO::File
	argument instead of a file name, so that the request file remains
	open during the whole autom4te run.
	($icache_file): New.
	(&freeze): Lock the $icache_file.

2003-04-29  Derek Price  <derek@ximbiot.com>

	* lib/autotest/general.m4 (AT_KEYWORDS): Don't use a comma as the
	seperator with m4_append_uniq().  It doesn't work.
	(AT_CLEANUP): Add `;' to end of at_help_all.